--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.23.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
