--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@tanstack/react-query": "^5.66.6",
     "antd": "^5.23.4",
     "axios": "^1.7.9",
