feat: add card-crud functionality

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,3 @@
-TCG_API_KEY=cf5350d4-1dc7-48a7-96b7-6e9e4ea85d1c
+VITE_TCG_API_KEY=cf5350d4-1dc7-48a7-96b7-6e9e4ea85d1c
+VITE_BASE_URL = "http://localhost:3000";
+VITE_TCG_API_BASE_URL="https://api.pokemontcg.io/v2"
